[tool.poetry]
name = "planweaver"
version = "0.1.0"
description = "A step-by-step execution LLM powered agent."
authors = ["Pankaj Garkoti <garkotipankaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.11.1"


[tool.poetry.group.dev.dependencies]
rope = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
